Update webapp image to 0.4 in DEV

--- a/apps/webapp/overlays/dev/kustomization.yaml
+++ b/apps/webapp/overlays/dev/kustomization.yaml
@@ -42,4 +42,4 @@ patches:
 # Imagens podem ter tags diferentes por ambiente
 images:
   - name: nginxdemos/hello
-    newTag: latest
+    newTag: 0.4
